force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/MonthlyStatementSubScheduleHistory__c.object-meta.xml
<CustomObject>
    <description>PTI2283-1967 - Objeto que irá armazenar as informações de histórico do agendamento de envio do extrato mensal.</description>
    <label>Histórico Agend Envio Extrato Mensal</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Número do histórico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos Agend Envio Extrato Mensal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>