force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <label>Linha Id</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>MonthlyStatementSubScheduleHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>