force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/CancellationDateTime__c.field-meta.xml
<CustomField>
    <fullName>CancellationDateTime__c</fullName>
    <label>Data/Hora Cancelamento</label>
    <type>DateTime</type>
</CustomField>