force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/CancellationUser__c.field-meta.xml
<CustomField>
    <fullName>CancellationUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário Cancelamento</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MonthlyStatementSubScheduleHistories</relationshipName>
    <type>Lookup</type>
</CustomField>