force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/Coast__c.field-meta.xml
<CustomField>
    <fullName>Coast__c</fullName>
    <label>Custo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>