force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/LastChangeDateFormula__c.field-meta.xml
<CustomField>
    <fullName>LastChangeDateFormula__c</fullName>
    <description>Bloco 03 - US 696 - Criação necessária devido a BUG de versão do vlocity que não reconhece o campo Last Modified Date padrão.</description>
    <formula>LastModifiedDate</formula>
    <label>Last Change Date Formula</label>
    <type>Date</type>
</CustomField>