force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/PeriodMonth__c.field-meta.xml
<CustomField>
    <fullName>PeriodMonth__c</fullName>
    <label>Período do Mês</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dia 01 ao dia 30</fullName>
            </value>
            <value>
                <fullName>Dia 10 ao dia 09</fullName>
            </value>
            <value>
                <fullName>Dia 20 ao dia 19</fullName>
            </value>
            <value>
                <fullName>Dia 01 ao dia 30/31</fullName>
                <isActive>false</isActive>
                <label>Dia 01 ao dia 30/31</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>