force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Motivo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>