force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>Endereço</label>
    <length>50</length>
    <type>Text</type>
</CustomField>