force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingAddressConcat__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressConcat__c</fullName>
    <formula>ShippingAddressType__c  + " "+ ShippingAddress__c +", "+  ShippingNumber__c +", "+ TEXT( ShippingComplementType1__c) +", "+   ShippingComplement1__c  + "- " + ShippingNeighborhood__c +" , "+  ShippingCity__c +" - "+  ShippingStateCode__c
+", "+ ShippingPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço Concat</label>
    <type>Text</type>
</CustomField>