force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingAddressType__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressType__c</fullName>
    <label>Tipo Logradouro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>