force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingComplement1__c.field-meta.xml
<CustomField>
    <fullName>ShippingComplement1__c</fullName>
    <label>Complemento 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>