force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingComplement2__c.field-meta.xml
<CustomField>
    <fullName>ShippingComplement2__c</fullName>
    <label>Complemento 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>