force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingComplement3__c.field-meta.xml
<CustomField>
    <fullName>ShippingComplement3__c</fullName>
    <label>Complemento 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>