force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingNeighborhood__c.field-meta.xml
<CustomField>
    <fullName>ShippingNeighborhood__c</fullName>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>