force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>CEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>