force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingStateCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingStateCode__c</fullName>
    <label>UF</label>
    <length>2</length>
    <type>Text</type>
</CustomField>