force-app/main/default/objects/MonthlyStatementSubScheduleHistory__c/fields/ShippingType__c.field-meta.xml
<CustomField>
    <fullName>ShippingType__c</fullName>
    <label>Tipo de envio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Correios</fullName>
            </value>
            <value>
                <fullName>Correios em Braile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>